--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "android-inventory-agent",
   "version": "1.0.0",
   "description": "Branch created with the intention of functioning as an introduction web site of the project, a small point of entry where anyone can find out what it is about and to be able to get relevant information.",
+  "sasslintConfig": ".sass-lint.yml",
+  "scripts": {
+    "start": "bundle exec jekyll serve",
+    "build": "bundle exec jekyll build",
+    "install": "bundle install",
+    "update-version": "ci/update_version_list.sh",
+    "test-sass": "./node_modules/.bin/sass-lint -c app/config/.sass-lint.yml 'css/**/*.scss, _sass/**/*.scss' -v -q",
+    "test-js": "./node_modules/.bin/eslint **/*.js  --fix",
+    "test-yaml": "ci/yamllint.sh",
+    "test": "npm run test-sass & npm run test-js & npm run test-yaml & npm run update-version"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/flyve-mdm/android-inventory-agent.git"
-  },
-  "sasslintConfig": ".sass-lint.yml",
-  "scripts": {
-    "update-version": "ci/update_version_list.sh",
-    "test-sass": "./node_modules/.bin/sass-lint --config .sass-lint.yml '**/*.scss' --verbose --no-exit",
-    "test-js": "./node_modules/.bin/eslint js/*.js",
-    "test-yaml": "ci/yamllint.sh",
-    "test-site": "ci/test-jekyll.sh",
-    "test": "npm run test-sass & npm run test-js & npm run test-yaml & npm run test-site & npm run update-version"
   },
   "keywords": [],
   "author": "",
@@ -21,11 +23,11 @@
   "bugs": {
     "url": "https://github.com/flyve-mdm/android-inventory-agent/issues"
   },
-  "homepage": "https://github.com/flyve-mdm/android-inventory-agent#readme",
+  "homepage": "http://flyve.org/android-inventory-agent/",
   "devDependencies": {
     "eslint": "^4.11.0",
     "eslint-config-google": "^0.9.1",
-    "htmlhint": "^0.9.13",
+    "htmlhint": "^0.10.1",
     "sass-lint": "^1.12.1",
     "yaml-lint": "^1.0.0"
   }
