--- a/package.json
+++ b/package.json
@@ -31,14 +31,12 @@
     "standard-version": "^8.0.1"
   },
   "dependencies": {
-    "dot-prop": "^4.2.1",
     "extend": "^3.0.2",
     "handlebars": "^4.0.14",
     "https-proxy-agent": "^2.2.0",
     "lodash": "^4.17.19",
     "lodash.merge": "^4.6.2",
     "lodash.template": "^4.5.0",
-    "mem": "^6.0.0",
-    "minimist": "^0.2.1"
+    "mem": "^6.0.0"
   }
 }
